force-app/main/default/objects/ht_ProducerCommunication__c/ht_ProducerCommunication__c.object-meta.xml
<CustomObject>
    <label>NIPR Producer Communication</label>
    <nameField>
        <displayFormat>PRC-{0000}</displayFormat>
        <label>Producer Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Producer Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>