force-app/main/default/objects/ht_ProducerCommunication__c/fields/ht_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ht_EmailAddress__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>