force-app/main/default/objects/ht_ProducerCommunication__c/fields/ht_EmailType__c.field-meta.xml
<CustomField>
    <fullName>d4c_EmailType__c</fullName>
    <label>Email Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>