force-app/main/default/objects/ht_ProducerCommunication__c/fields/ht_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ht_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>