force-app/main/default/objects/ht_ProducerCommunication__c/fields/ht_PhoneType__c.field-meta.xml
<CustomField>
    <fullName>ht_PhoneType__c</fullName>
    <label>Phone Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>