force-app/main/default/objects/ht_ProducerCommunication__c/fields/ht_Producer__c.field-meta.xml
<CustomField>
    <fullName>ht_Producer__c</fullName>
    <label>Producer</label>
    <referenceTo>ht_Producer__c</referenceTo>
    <relationshipName>Producer_Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>