force-app/main/default/objects/ht_ProducerCommunication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_EmailAddress__c</columns>
    <columns>ht_EmailType__c</columns>
    <columns>ht_PhoneType__c</columns>
    <columns>ht_PhoneNumber__c</columns>
    <columns>ht_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>